# bevy_prototype_animation

./: Cargo.toml  README.md
benches/: curves.rs
src/: animatable.rs  clip.rs  curve.rs  lib.rs  path.rs
src/curve/: compressed.rs  fixed.rs  mod.rs  variable.rs
src/curves/: fixed.rs  mod.rs
src/graph/: application.rs  graph.rs  hierarchy.rs  mod.rs  node.rs  track.rs
src/math/interpolation/: lerp.rs  mod.rs  util.rs
src/path/: field.rs  mod.rs
