[package]
name = "bevy_prototype_animation"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", features = ["glam"] }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git" }
bevy_core = { git = "https://github.com/bevyengine/bevy.git" }
bevy_math = { git = "https://github.com/bevyengine/bevy.git" }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git" }
serde = "1.0"
parallel_vec = "0.2"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"

[[benches]]
name = "curves"
harness = false