[package]
name = "bevy_prototype_animation"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy.git" }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git" }
bevy_core = { git = "https://github.com/bevyengine/bevy.git" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git" }
bevy_log = { git = "https://github.com/bevyengine/bevy.git" }
bevy_math = { git = "https://github.com/bevyengine/bevy.git" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", features = ["glam"] }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy.git" }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git" }
serde = "1.0"
parallel_vec = "0.2"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
static_assertions = "1.1"

[[benches]]
name = "curves"
harness = false